Fixes crash #160913. I still can't believe clearly how this fixes it, and why it didn't crash on my computer. Anyway, it works... suprising....

BUG: 160913


svn path=/trunk/KDE/kdegames/konquest/; revision=798276